--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <input type="text" id="reponse-input" placeholder="Entrez votre réponse">
     <button onclick="verifierReponse()">Soumettre</button>
     <p id="resultat"></p>
-  </div>
+</div>
 
   <!-- Compteur de questions restantes -->
   <p id="questions-restantes">Questions restantes : <span id="compteur-questions">20</span></p>
@@ -94,6 +94,7 @@
   // Paires de mots et de significations
   let motsEtSignifications = [
   { mot: "A(n)", signification: "Absence de" },
+  { mot: "Abdomin(o)", signification: "Abdomen" },
   { mot: "Acou", signification: "Entendre" },
   { mot: "Acu", signification: "Aiguille" },
   { mot: "Acro", signification: "Extrémité" },
@@ -111,33 +112,34 @@
   { mot: "Arthr(o)", signification: "Articulation" },
   { mot: "Athér(o)", signification: "Gras" },
   { mot: "Audi(o)", signification: "Audition" },
-  { mot: "Aur(i)", signification: "Oreille" },
+  { mot: "Auricul(o)", signification: "Oreille" },
   { mot: "Aut(o)", signification: "Soi" },
   { mot: "Bi, Bis", signification: "Double, deux" },
   { mot: "Brachy", signification: "Petit" },
   { mot: "Brady", signification: "Lent" },
-  { mot: "Bucc(o)", signification: "Joue" },
+  { mot: "Bucc(o)", signification: "Bouche" },
   { mot: "Calc", signification: "Calcium" },
   { mot: "Carcin(o)", signification: "Cancer" },
   { mot: "Cardi(o)", signification: "Cœur" },
   { mot: "Caryo", signification: "Noyau cellulaire" },
   { mot: "Céphal(o)", signification: "Tête" },
   { mot: "Cérébell", signification: "Cervelet" },
-  { mot: "Cervi", signification: "Cou" },
+  { mot: "Cervic(o)", signification: "Cou" },
   { mot: "Cervix", signification: "Col de l'utérus" },
   { mot: "Chimi", signification: "Substance chimique" },
-  { mot: "Chir", signification: "Rachis" },
   { mot: "Chlor", signification: "Vert" },
   { mot: "Cholé", signification: "Bile" },
   { mot: "Cholécyst", signification: "Vésicule biliaire" },
   { mot: "Chondr(o)", signification: "Cartilage" },
   { mot: "Chrom", signification: "Couleur" },
   { mot: "Co-", signification: "Avec" },
+  { mot: "Coccyg(o)", signification: "Coccyx" },
   { mot: "Col", signification: "Côlon" },
   { mot: "Colp", signification: "Vagin" },
-  { mot: "Cox", signification: "Hanche" },
+  { mot: "Cox(o)", signification: "Hanche" },
   { mot: "Cost(o)", signification: "Côte" },
-  { mot: "Crâni", signification: "Cranien" },
+  { mot: "Crânio", signification: "Crâne" },
+  { mot: "Crur(o)", signification: "Cuisse" },
   { mot: "Cry(o)", signification: "Froid" },
   { mot: "Cut", signification: "Peau" },
   { mot: "Cyan(o)", signification: "Bleu" },
@@ -149,7 +151,7 @@
   { mot: "Deut", signification: "Second" },
   { mot: "Dia-", signification: "À travers" },
   { mot: "Disc", signification: "Disque intervertébral" },
-  { mot: "Dors", signification: "Dos" },
+  { mot: "Dors(o)", signification: "Dos" },
   { mot: "Dys", signification: "Déficient, anormal" },
   { mot: "Ectomie", signification: "Excision" },
   { mot: "Émèse", signification: "Émission, vomissement" },
@@ -163,7 +165,7 @@
   { mot: "Érythr(o)", signification: "Rouge" },
   { mot: "Exo", signification: "À l’extérieur" },
   { mot: "Extra", signification: "Hors de" },
-  { mot: "Foet", signification: "Fœtus" },
+  { mot: "Faci(o)", signification: "Face" },
   { mot: "Gastr(o)", signification: "Estomac" },
   { mot: "Gène", signification: "Engendre, produit" },
   { mot: "Gén", signification: "Devenir, provenir" },
@@ -171,7 +173,7 @@
   { mot: "Gloss(o)", signification: "Langue" },
   { mot: "Gluc", signification: "Glucose" },
   { mot: "Glyc(o)", signification: "Sucre" },
-  { mot: "Gon", signification: "Genou" },
+  { mot: "Gon(o)", signification: "Genou" },
   { mot: "Graphie", signification: "Enregistrement graphique" },
   { mot: "Gyn", signification: "Femme" },
   { mot: "Hém(ato)", signification: "Sang" },
@@ -182,9 +184,11 @@
   { mot: "Hydr", signification: "Eau" },
   { mot: "Iâtre", signification: "Médecin" },
   { mot: "Inter-", signification: "Entre" },
+  { mot: "Inguin(o)", signification: "Aine" },
   { mot: "Isch", signification: "Arrêt, suppression" },
   { mot: "Iso-", signification: "Même, égal" },
   { mot: "Ite", signification: "Inflammation" },
+  { mot: "Jug(o)", signification: "Joue" },
   { mot: "Kali", signification: "Potassium" },
   { mot: "Kinés", signification: "Mouvement" },
   { mot: "Lapar(o)", signification: "Paroi abdominale" },
@@ -195,7 +199,7 @@
   { mot: "Lip(o)", signification: "Graisse" },
   { mot: "Logie", signification: "Etude, science" },
   { mot: "Logue", signification: "Spécialiste" },
-  { mot: "Lomb", signification: "Région lombaire" },
+  { mot: "Lomb(o)", signification: "Région lombaire" },
   { mot: "Lyse", signification: "Dissolution, dissociation" },
   { mot: "Macro", signification: "Grand" },
   { mot: "Mal", signification: "Mauvais, anormal" },
@@ -231,7 +235,7 @@
   { mot: "Ostéo", signification: "Os" },
   { mot: "Ot(o)", signification: "Oreille" },
   { mot: "Path(o)", signification: "Maladie" },
-  { mot: "Péd(o)", signification: "Enfant" },
+  { mot: "Péd(o), Pédie", signification: "Pied" },
   { mot: "Pénie", signification: "Pauvreté, diminution" },
   { mot: "Peps, Pept", signification: "Digérer" },
   { mot: "Péri", signification: "Autour" },
@@ -257,6 +261,7 @@
   { mot: "Pan-", signification: "Tous" },
   { mot: "Para-", signification: "opposition, hors de" },
   { mot: "Pare", signification: "Accouchement" },
+  { mot: "Pariét(o)", signification: "Paroi, os périétal" },
   { mot: "Patell", signification: "Rotule" },
   { mot: "Path, pathie", signification: "Maladie" },
   { mot: "Pénie", signification: "Pauvreté, diminution" },
@@ -284,11 +289,12 @@
   { mot: "Pulm", signification: "Poumon" },
   { mot: "Pyél(o)", signification: "Bassinet" },
   { mot: "Pyr(o)", signification: "Fièvre, feu" },
-  { mot: "Rachi(o)", signification: "Colonne vertébrale" },
+  { mot: "Rachi-", signification: "Colonne vertébrale" },
   { mot: "Rén(o)", signification: "Reins" },
   { mot: "Rhag", signification: "Casser, éclater" },
   { mot: "Rhé", signification: "Flux" },
   { mot: "Rhin(o)", signification: "Nez" },
+  { mot: "Sacr(o)", signification: "Sacrum" },
   { mot: "Sclér(o)", signification: "Dur" },
   { mot: "Scope", signification: "Instrument" },
   { mot: "Scopie", signification: "Examen" },
@@ -297,15 +303,17 @@
   { mot: "Stéat(o)", signification: "Graisse" },
   { mot: "Stén(o)", signification: "Étroit, compressé" },
   { mot: "Stéth(o)", signification: "Thorax" },
-  { mot: "Stom", signification: "Bouche, ouverture" },
+  { mot: "Stomat(o)", signification: "Bouche" },
   { mot: "Supra", signification: "Au-dessus" },
   { mot: "Tachy", signification: "Rapide" },
+  { mot: "Tempor(o)", signification: "Tempe" },
   { mot: "Thérap", signification: "Traitement" },
   { mot: "Therm(o)", signification: "Chaleur" },
   { mot: "Thorac(o)", signification: "Thorax" },
   { mot: "Thromb(o)", signification: "Caillot, grosseur" },
   { mot: "Tomie", signification: "Incision" },
   { mot: "Tox(i)", signification: "Poison" },
+  { mot: "Trich(o), Pil(o), Capill(o)", signification: "Poils, Cheveux" },
   { mot: "Urie", signification: "Urine" },
   { mot: "Vas(o)", signification: "Vaisseau" },
   { mot: "Vén(o)", signification: "Veine" },
