--- a/index.html
+++ b/index.html
@@ -97,14 +97,13 @@
   { mot: "Abdomin(o)", signification: "Abdomen" },
   { mot: "Acou", signification: "Entendre" },
   { mot: "Acu", signification: "Aiguille" },
-  { mot: "Acro", signification: "Extrémité" },
+  { mot: "Acr(o)", signification: "Extrémité" },
   { mot: "Ad", signification: "près de" },
   { mot: "Adéno", signification: "Glande" },
   { mot: "Aér(o)", signification: "Air" },
-  { mot: "Algie", signification: "Douleur" },
-  { mot: "Allo-", signification: "Étranger, autre" },
+  { mot: "Algie, Odyn(o)", signification: "Douleur" },
   { mot: "Andr(o)", signification: "Homme" },
-  { mot: "Angi(o)", signification: "Vaisseau" },
+  { mot: "Angi(o)", signification: "Vaisseaux" },
   { mot: "Anté", signification: "Avant" },
   { mot: "Anter(i)", signification: "Devant, avant" },
   { mot: "Anti-", signification: "Contre" },
@@ -112,130 +111,112 @@
   { mot: "Arthr(o)", signification: "Articulation" },
   { mot: "Athér(o)", signification: "Gras" },
   { mot: "Audi(o)", signification: "Audition" },
-  { mot: "Auricul(o)", signification: "Oreille" },
+  { mot: "Auricul(o), Ot(o)", signification: "Oreille" },
   { mot: "Aut(o)", signification: "Soi" },
-  { mot: "Bi, Bis", signification: "Double, deux" },
-  { mot: "Brachy", signification: "Petit" },
+  { mot: "Axill(o)", signification: "Aisselle" },
+  { mot: "Bi, Ambi, Di", signification: "Deux" },
+  { mot: "Brachi(o)", signification: "Bras" },
   { mot: "Brady", signification: "Lent" },
-  { mot: "Bucc(o)", signification: "Bouche" },
+  { mot: "Bronch(o), Bronchiol(o)", signification: "Bronche" },
+  { mot: "Bucc(o), Stomat(o)", signification: "Bouche" },
   { mot: "Calc", signification: "Calcium" },
   { mot: "Carcin(o)", signification: "Cancer" },
   { mot: "Cardi(o)", signification: "Cœur" },
-  { mot: "Caryo", signification: "Noyau cellulaire" },
   { mot: "Céphal(o)", signification: "Tête" },
-  { mot: "Cérébell", signification: "Cervelet" },
   { mot: "Cervic(o)", signification: "Cou" },
-  { mot: "Cervix", signification: "Col de l'utérus" },
-  { mot: "Chimi", signification: "Substance chimique" },
+  { mot: "Chir(o), Man(o)", signification: "Main" },
   { mot: "Chlor", signification: "Vert" },
   { mot: "Cholé", signification: "Bile" },
-  { mot: "Cholécyst", signification: "Vésicule biliaire" },
   { mot: "Chondr(o)", signification: "Cartilage" },
   { mot: "Chrom", signification: "Couleur" },
+  { mot: "Cleïd(o)", signification: "Clavicule" },
   { mot: "Co-", signification: "Avec" },
   { mot: "Coccyg(o)", signification: "Coccyx" },
-  { mot: "Col", signification: "Côlon" },
-  { mot: "Colp", signification: "Vagin" },
+  { mot: "Col, Colon(o)", signification: "Côlon" },
+  { mot: "Colp(o)", signification: "Vagin" },
   { mot: "Cox(o)", signification: "Hanche" },
   { mot: "Cost(o)", signification: "Côte" },
   { mot: "Crânio", signification: "Crâne" },
   { mot: "Crur(o)", signification: "Cuisse" },
   { mot: "Cry(o)", signification: "Froid" },
-  { mot: "Cut", signification: "Peau" },
+  { mot: "Cut, Cuti", signification: "Peau" },
   { mot: "Cyan(o)", signification: "Bleu" },
   { mot: "Cyst(o)", signification: "Vessie" },
   { mot: "Cyto", signification: "Cellule" },
   { mot: "Dactyl(o)", signification: "Doigt ou orteil" },
   { mot: "Derm(ato)", signification: "Peau" },
-  { mot: "Desm", signification: "Ligament" },
   { mot: "Deut", signification: "Second" },
   { mot: "Dia-", signification: "À travers" },
-  { mot: "Disc", signification: "Disque intervertébral" },
+  { mot: "Diaphragm(o), Phren(o)", signification: "Diaphragme" },
+  { mot: "Digit(o)", signification: "Doigt" },
+  { mot: "Disc(o)", signification: "Disque intervertébral" },
   { mot: "Dors(o)", signification: "Dos" },
-  { mot: "Dys", signification: "Déficient, anormal" },
+  { mot: "Dys", signification: "Difficulté" },
   { mot: "Ectomie", signification: "Excision" },
-  { mot: "Émèse", signification: "Émission, vomissement" },
-  { mot: "Émie", signification: "Sang" },
+  { mot: "-émèse", signification: "Vomissement" },
   { mot: "Encéphal(o)", signification: "Cerveau" },
   { mot: "End(o)", signification: "Intérieur" },
   { mot: "Entér(o)", signification: "Intestin" },
   { mot: "Épi", signification: "Au-dessus" },
-  { mot: "Eu-", signification: "Normal" },
   { mot: "Ergo", signification: "Travail" },
   { mot: "Érythr(o)", signification: "Rouge" },
-  { mot: "Exo", signification: "À l’extérieur" },
+  { mot: "Exo", signification: "À l’extérieur de" },
   { mot: "Extra", signification: "Hors de" },
   { mot: "Faci(o)", signification: "Face" },
   { mot: "Gastr(o)", signification: "Estomac" },
-  { mot: "Gène", signification: "Engendre, produit" },
-  { mot: "Gén", signification: "Devenir, provenir" },
+  { mot: "-gène", signification: "Provenir" },
   { mot: "Gingiv", signification: "Gencives" },
-  { mot: "Gloss(o)", signification: "Langue" },
-  { mot: "Gluc", signification: "Glucose" },
+  { mot: "Gloss(o), Lingu(o)", signification: "Langue" },
+  { mot: "Gluc(o)", signification: "Glucose" },
   { mot: "Glyc(o)", signification: "Sucre" },
   { mot: "Gon(o)", signification: "Genou" },
   { mot: "Graphie", signification: "Enregistrement graphique" },
-  { mot: "Gyn", signification: "Femme" },
+  { mot: "Gyn(o)", signification: "Femme" },
   { mot: "Hém(ato)", signification: "Sang" },
   { mot: "Hémi", signification: "Demi" },
   { mot: "Hépat(o)", signification: "Foie" },
   { mot: "Hist(o)", signification: "Tissu" },
   { mot: "Homéo-", signification: "Semblable" },
-  { mot: "Hydr", signification: "Eau" },
+  { mot: "Hydr(o)", signification: "Eau" },
   { mot: "Iâtre", signification: "Médecin" },
   { mot: "Inter-", signification: "Entre" },
   { mot: "Inguin(o)", signification: "Aine" },
   { mot: "Isch", signification: "Arrêt, suppression" },
-  { mot: "Iso-", signification: "Même, égal" },
+  { mot: "Iso-", signification: "Egal" },
   { mot: "Ite", signification: "Inflammation" },
   { mot: "Jug(o)", signification: "Joue" },
-  { mot: "Kali", signification: "Potassium" },
   { mot: "Kinés", signification: "Mouvement" },
   { mot: "Lapar(o)", signification: "Paroi abdominale" },
-  { mot: "Laryng", signification: "Larynx" },
-  { mot: "Leptique", signification: "Mince, faible" },
+  { mot: "Laryng(o)", signification: "Larynx" },
+  { mot: "Leptique", signification: "Qui calme" },
   { mot: "Leuc(o)", signification: "Blanc" },
-  { mot: "Lingu(o)", signification: "Langue" },
   { mot: "Lip(o)", signification: "Graisse" },
-  { mot: "Logie", signification: "Etude, science" },
+  { mot: "Logie", signification: "Science" },
   { mot: "Logue", signification: "Spécialiste" },
   { mot: "Lomb(o)", signification: "Région lombaire" },
-  { mot: "Lyse", signification: "Dissolution, dissociation" },
+  { mot: "Lyse", signification: "Dissolution" },
   { mot: "Macro", signification: "Grand" },
-  { mot: "Mal", signification: "Mauvais, anormal" },
-  { mot: "Malac", signification: "Mou" },
-  { mot: "Mamm(o)", signification: "Sein" },
-  { mot: "Mast(o)", signification: "Sein" },
+  { mot: "Mal", signification: "Anormal" },
+  { mot: "Mamm(o), Mast(o)", signification: "Sein" },
   { mot: "Mégal(o)", signification: "Grand" },
   { mot: "Mélan(o)", signification: "Noir" },
-  { mot: "Méning(o)", signification: "Membranes" },
-  { mot: "Mél, Mèle", signification: "Membre" },
+  { mot: "Méninge", signification: "Membranes" },
   { mot: "Méso-", signification: "Milieu" },
   { mot: "Micro", signification: "Petit" },
   { mot: "My(o)", signification: "Muscle" },
   { mot: "Myc(o)", signification: "Champignon" },
   { mot: "Myél(o)", signification: "Moelle" },
-  { mot: "Nas(o)", signification: "Nez" },
   { mot: "Nécr(o)", signification: "Mort" },
-  { mot: "Néphr(o)", signification: "Rein" },
-  { mot: "Neur(o)", signification: "Nerf" },
-  { mot: "Nigr", signification: "Noir" },
-  { mot: "Nuclé", signification: "Noyau" },
-  { mot: "Ocul(o)", signification: "Oeil" },
-  { mot: "Odyn(o)", signification: "Douleur" },
-  { mot: "Ome", signification: "Idée de tumeur" },
+  { mot: "Neur(o), Névr(o)", signification: "Nerf" },
+  { mot: "Ocul(o), Ophtalmo", signification: "Oeil" },
   { mot: "Onco", signification: "Tumeur" },
-  { mot: "Oophor(o)", signification: "Ovaires" },
-  { mot: "Ophtalmo", signification: "Oeil" },
-  { mot: "Opo", signification: "Extrait soluble" },
+  { mot: "Ondo(o)", signification: "Dents" },
+  { mot: "Onych(o), Ungué(o)", signification: "Ongle" },
   { mot: "Orchi(o)", signification: "Testicule" },
-  { mot: "Ose", signification: "Maladie non inflammatoire" },
-  { mot: "Ose", signification: "Sucre simple" },
   { mot: "Osm", signification: "Odeur" },
   { mot: "Ostéo", signification: "Os" },
-  { mot: "Ot(o)", signification: "Oreille" },
+  { mot: "Palm(o)", signification: "Paume" },
   { mot: "Path(o)", signification: "Maladie" },
-  { mot: "Péd(o), Pédie", signification: "Pied" },
   { mot: "Pénie", signification: "Pauvreté, diminution" },
   { mot: "Peps, Pept", signification: "Digérer" },
   { mot: "Péri", signification: "Autour" },
@@ -249,7 +230,7 @@
   { mot: "Pnée", signification: "Respiration" },
   { mot: "Pneum(ato)", signification: "Respiration, air" },
   { mot: "Pneumon(o)", signification: "Poumon" },
-  { mot: "Pod(o)", signification: "Pied" },
+  { mot: "Pod(o), Pédi", signification: "Pied" },
   { mot: "Poie", signification: "Faire, produire" },
   { mot: "Poly", signification: "Beaucoup, nombreux" },
   { mot: "Post", signification: "Après" },
@@ -259,51 +240,41 @@
   { mot: "Pseud(o)", signification: "Faux" },
   { mot: "Pachy-", signification: "Épais" },
   { mot: "Pan-", signification: "Tous" },
-  { mot: "Para-", signification: "opposition, hors de" },
   { mot: "Pare", signification: "Accouchement" },
-  { mot: "Pariét(o)", signification: "Paroi, os périétal" },
-  { mot: "Patell", signification: "Rotule" },
+  { mot: "Patell(o)", signification: "Rotule" },
   { mot: "Path, pathie", signification: "Maladie" },
-  { mot: "Pénie", signification: "Pauvreté, diminution" },
+  { mot: "Pénie", signification: "Carence" },
   { mot: "Peri-", signification: "Autour" },
-  { mot: "Pexie", signification: "Ajuster" },
   { mot: "Phile", signification: "Affinité pour" },
-  { mot: "Phléb", signification: "Veine" },
-  { mot: "Phot", signification: "Lumière" },
+  { mot: "Vein(o), Phléb(o)", signification: "Veine" },
+  { mot: "Phot(o)", signification: "Lumière" },
   { mot: "Plégie", signification: "Paralysie" },
   { mot: "Pleur", signification: "Plèvre" },
   { mot: "Pnée", signification: "Respiration" },
   { mot: "Pneum", signification: "Air, respiration" },
   { mot: "Plasie", signification: "Formation" },
   { mot: "Plastie", signification: "Opération plastique" },
-  { mot: "Poïèse", signification: "Fabrication, production" },
-  { mot: "Polio", signification: "Substance grise" },
-  { mot: "Pollaki-", signification: "Souvent" },
   { mot: "Poly-", signification: "Plusieurs" },
-  { mot: "Proct", signification: "Anus" },
-  { mot: "Proso", signification: "En avant, loin" },
+  { mot: "Proct(o), An(o)", signification: "Anus" },
   { mot: "Prosop", signification: "Visage" },
-  { mot: "Protér", signification: "Premier" },
   { mot: "Ptose", signification: "Chute, descente" },
   { mot: "Ptysie", signification: "Crachat" },
   { mot: "Pulm", signification: "Poumon" },
-  { mot: "Pyél(o)", signification: "Bassinet" },
-  { mot: "Pyr(o)", signification: "Fièvre, feu" },
+  { mot: "Pyr(o)", signification: "Fièvre" },
   { mot: "Rachi-", signification: "Colonne vertébrale" },
-  { mot: "Rén(o)", signification: "Reins" },
-  { mot: "Rhag", signification: "Casser, éclater" },
-  { mot: "Rhé", signification: "Flux" },
-  { mot: "Rhin(o)", signification: "Nez" },
+  { mot: "Rén(o), Néphr(o)", signification: "Reins" },
+  { mot: "Rhin(o), Nas(o)", signification: "Nez" },
   { mot: "Sacr(o)", signification: "Sacrum" },
+  { mot: "Scapul(o)", signification: "Epaule" },
   { mot: "Sclér(o)", signification: "Dur" },
   { mot: "Scope", signification: "Instrument" },
   { mot: "Scopie", signification: "Examen" },
   { mot: "Somat(o)", signification: "Corps" },
-  { mot: "Spondyl(o)", signification: "Vertèbres" },
+  { mot: "Spondyl(o), Vertébr(o)", signification: "Vertèbres" },
   { mot: "Stéat(o)", signification: "Graisse" },
-  { mot: "Stén(o)", signification: "Étroit, compressé" },
+  { mot: "Stén(o)", signification: "Étroit" },
+  { mot: "Stern(o)", signification: "Sternum" },
   { mot: "Stéth(o)", signification: "Thorax" },
-  { mot: "Stomat(o)", signification: "Bouche" },
   { mot: "Supra", signification: "Au-dessus" },
   { mot: "Tachy", signification: "Rapide" },
   { mot: "Tempor(o)", signification: "Tempe" },
