--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
   // Paires de mots et de significations
   let motsEtSignifications = [
   { mot: "A(n)", signification: "Absence de" },
+  { mot: "Ana-", signification: "En arrière" },
   { mot: "Abdomin(o)", signification: "Abdomen" },
   { mot: "Acou", signification: "Entendre" },
   { mot: "Acu", signification: "Aiguille" },
@@ -103,6 +104,7 @@
   { mot: "Aér(o)", signification: "Air" },
   { mot: "Algie, Odyn(o)", signification: "Douleur" },
   { mot: "Andr(o)", signification: "Homme" },
+  { mot: "Aniso-", signification: "Inégal" },
   { mot: "Angi(o)", signification: "Vaisseaux" },
   { mot: "Anté", signification: "Avant" },
   { mot: "Anter(i)", signification: "Devant, avant" },
@@ -114,6 +116,7 @@
   { mot: "Auricul(o), Ot(o)", signification: "Oreille" },
   { mot: "Aut(o)", signification: "Soi" },
   { mot: "Axill(o)", signification: "Aisselle" },
+  { mot: "Balné(o)", signification: "Bain" },
   { mot: "Bi, Ambi, Di", signification: "Deux" },
   { mot: "Brachi(o)", signification: "Bras" },
   { mot: "Brady", signification: "Lent" },
@@ -145,14 +148,18 @@
   { mot: "Cyto", signification: "Cellule" },
   { mot: "Dactyl(o)", signification: "Doigt ou orteil" },
   { mot: "Derm(ato)", signification: "Peau" },
+  { mot: "Des-", signification: "Manque" },
   { mot: "Deut", signification: "Second" },
   { mot: "Dia-", signification: "À travers" },
   { mot: "Diaphragm(o), Phren(o)", signification: "Diaphragme" },
   { mot: "Digit(o)", signification: "Doigt" },
   { mot: "Disc(o)", signification: "Disque intervertébral" },
+  { mot: "Dolicho-", signification: "Long" },
   { mot: "Dors(o)", signification: "Dos" },
   { mot: "Dys", signification: "Difficulté" },
-  { mot: "Ectomie", signification: "Excision" },
+  { mot: "Éch(o)-", signification: "Ultrasons" },
+  { mot: "-ectasie, -cèle", signification: "Dilatation" },
+  { mot: "-ectomie", signification: "Ablation" },
   { mot: "-émèse", signification: "Vomissement" },
   { mot: "Encéphal(o)", signification: "Cerveau" },
   { mot: "End(o)", signification: "Intérieur" },
@@ -160,9 +167,11 @@
   { mot: "Épi", signification: "Au-dessus" },
   { mot: "Ergo", signification: "Travail" },
   { mot: "Érythr(o)", signification: "Rouge" },
+  { mot: "Eu-", signification: "Normal" },
   { mot: "Exo", signification: "À l’extérieur de" },
-  { mot: "Extra", signification: "Hors de" },
+  { mot: "Extra, Ab-, Ecto", signification: "Hors de" },
   { mot: "Faci(o)", signification: "Face" },
+  { mot: "-gramme", signification: "Résultat écrit" },
   { mot: "Gastr(o)", signification: "Estomac" },
   { mot: "-gène", signification: "Provenir" },
   { mot: "Gingiv", signification: "Gencives" },
@@ -172,15 +181,20 @@
   { mot: "Gon(o)", signification: "Genou" },
   { mot: "Graphie", signification: "Enregistrement graphique" },
   { mot: "Gyn(o)", signification: "Femme" },
+  { mot: "Héli(o)", signification: "Soleil" },
   { mot: "Hém(ato)", signification: "Sang" },
   { mot: "Hémi", signification: "Demi" },
   { mot: "Hépat(o)", signification: "Foie" },
+  { mot: "Hétéro-", signification: "Différent" },
+  { mot: "Hexa", signification: "Six" },
   { mot: "Hist(o)", signification: "Tissu" },
-  { mot: "Homéo-", signification: "Semblable" },
+  { mot: "Homéo-, Homo-", signification: "Semblable" },
   { mot: "Hydr(o)", signification: "Eau" },
+  { mot: "Hypo-, Infra-", signification: "Dessous" },
   { mot: "Iâtre", signification: "Médecin" },
   { mot: "Inter-", signification: "Entre" },
   { mot: "Inguin(o)", signification: "Aine" },
+  { mot: "Intra-", signification: "Dans" },
   { mot: "Isch", signification: "Arrêt, suppression" },
   { mot: "Iso-", signification: "Egal" },
   { mot: "Ite", signification: "Inflammation" },
@@ -190,18 +204,21 @@
   { mot: "Laryng(o)", signification: "Larynx" },
   { mot: "Leptique", signification: "Qui calme" },
   { mot: "Leuc(o)", signification: "Blanc" },
+  { mot: "Lith(o)", signification: "Pierre" },
   { mot: "Lip(o)", signification: "Graisse" },
   { mot: "Logie", signification: "Science" },
   { mot: "Logue", signification: "Spécialiste" },
   { mot: "Lomb(o)", signification: "Région lombaire" },
+  { mot: "Lux(o), Phot(o)", signification: "Lumière" },
   { mot: "Lyse", signification: "Dissolution" },
-  { mot: "Macro", signification: "Grand" },
+  { mot: "Macro, Méga", signification: "Grand" },
   { mot: "Mal", signification: "Anormal" },
   { mot: "Mamm(o), Mast(o)", signification: "Sein" },
-  { mot: "Mégal(o)", signification: "Grand" },
+  { mot: "Média", signification: "Milieu" },
   { mot: "Mélan(o)", signification: "Noir" },
   { mot: "Méninge", signification: "Membranes" },
   { mot: "Méso-", signification: "Milieu" },
+  { mot: "-métrie", signification: "Mesure" },
   { mot: "Micro", signification: "Petit" },
   { mot: "My(o)", signification: "Muscle" },
   { mot: "Myc(o)", signification: "Champignon" },
@@ -213,14 +230,17 @@
   { mot: "Ondo(o)", signification: "Dents" },
   { mot: "Onych(o), Ungué(o)", signification: "Ongle" },
   { mot: "Orchi(o)", signification: "Testicule" },
+  { mot: "Ortho", signification: "Droit" },
   { mot: "Osm", signification: "Odeur" },
+  { mot: "-ose", signification: "Non inflammatoire" },
   { mot: "Ostéo", signification: "Os" },
   { mot: "Palm(o)", signification: "Paume" },
+  { mot: "Para-", signification: "A côte de" },
   { mot: "Path(o)", signification: "Maladie" },
-  { mot: "Pénie", signification: "Pauvreté, diminution" },
-  { mot: "Peps, Pept", signification: "Digérer" },
+  { mot: "Pénie", signification: "Diminution" },
+  { mot: "Pepsie, Pept", signification: "Digérer" },
   { mot: "Péri", signification: "Autour" },
-  { mot: "Phag(o)", signification: "Manger, détruire" },
+  { mot: "Phag(o)", signification: "Manger" },
   { mot: "Pharmaco", signification: "Médicament" },
   { mot: "Pharyng(o)", signification: "Gorge" },
   { mot: "Phléb(o)", signification: "Veine" },
@@ -228,14 +248,15 @@
   { mot: "Plastie", signification: "Remise en état" },
   { mot: "Plég(ie)", signification: "Paralysie" },
   { mot: "Pnée", signification: "Respiration" },
-  { mot: "Pneum(ato)", signification: "Respiration, air" },
   { mot: "Pneumon(o)", signification: "Poumon" },
   { mot: "Pod(o), Pédi", signification: "Pied" },
-  { mot: "Poie", signification: "Faire, produire" },
-  { mot: "Poly", signification: "Beaucoup, nombreux" },
-  { mot: "Post", signification: "Après" },
-  { mot: "Postér(i)", signification: "Dos, derrière" },
+  { mot: "Poie", signification: "Produire" },
+  { mot: "Poly", signification: "Beaucoup" },
+  { mot: "Post-", signification: "Après" },
+  { mot: "Postér(i)", signification: "Derrière" },
+  { mot: "Pré-", signification: "Avant" },
   { mot: "Presby", signification: "gé" },
+  { mot: "Pro-", signification: "Devant" },
   { mot: "Proct(o)", signification: "Anus" },
   { mot: "Pseud(o)", signification: "Faux" },
   { mot: "Pachy-", signification: "Épais" },
@@ -244,48 +265,66 @@
   { mot: "Patell(o)", signification: "Rotule" },
   { mot: "Path, pathie", signification: "Maladie" },
   { mot: "Pénie", signification: "Carence" },
+  { mot: "Per-", signification: "A travers" },
   { mot: "Peri-", signification: "Autour" },
+  { mot: "-pexie", signification: "Fixer" },
   { mot: "Phile", signification: "Affinité pour" },
-  { mot: "Vein(o), Phléb(o)", signification: "Veine" },
+  { mot: "Phléb(o), Vein(o)", signification: "Veine" },
   { mot: "Phot(o)", signification: "Lumière" },
-  { mot: "Plégie", signification: "Paralysie" },
   { mot: "Pleur", signification: "Plèvre" },
   { mot: "Pnée", signification: "Respiration" },
-  { mot: "Pneum", signification: "Air, respiration" },
+  { mot: "Pneum(o)", signification: "Respiration" },
   { mot: "Plasie", signification: "Formation" },
   { mot: "Plastie", signification: "Opération plastique" },
   { mot: "Poly-", signification: "Plusieurs" },
+  { mot: "Poli(o)", signification: "Gris" },
   { mot: "Proct(o), An(o)", signification: "Anus" },
+  { mot: "Prim, Uni", signification: "Un" },
   { mot: "Prosop", signification: "Visage" },
-  { mot: "Ptose", signification: "Chute, descente" },
+  { mot: "Ptose", signification: "Chute" },
   { mot: "Ptysie", signification: "Crachat" },
+  { mot: "Purpura", signification: "Pourpre" },
   { mot: "Pulm", signification: "Poumon" },
   { mot: "Pyr(o)", signification: "Fièvre" },
+  { mot: "Quint-, Penta", signification: "Cinq" },
+  { mot: "Quadri, tétra", signification: "Quatre" },
+  { mot: "Radi(o)", signification: "Rayon" },
   { mot: "Rachi-", signification: "Colonne vertébrale" },
+  { mot: "-rraphie", signification: "Recoudre" },
+  { mot: "-rragie", signification: "Jaillissement" },
+  { mot: "Rétro-", signification: "Derrière" },
   { mot: "Rén(o), Néphr(o)", signification: "Reins" },
   { mot: "Rhin(o), Nas(o)", signification: "Nez" },
   { mot: "Sacr(o)", signification: "Sacrum" },
   { mot: "Scapul(o)", signification: "Epaule" },
   { mot: "Sclér(o)", signification: "Dur" },
   { mot: "Scope", signification: "Instrument" },
-  { mot: "Scopie", signification: "Examen" },
+  { mot: "Scopie", signification: "Examen visuel" },
   { mot: "Somat(o)", signification: "Corps" },
+  { mot: "Spanio-", signification: "Rare" },
   { mot: "Spondyl(o), Vertébr(o)", signification: "Vertèbres" },
   { mot: "Stéat(o)", signification: "Graisse" },
   { mot: "Stén(o)", signification: "Étroit" },
   { mot: "Stern(o)", signification: "Sternum" },
   { mot: "Stéth(o)", signification: "Thorax" },
+  { mot: "-stomie", signification: "Abouchement" },
   { mot: "Supra", signification: "Au-dessus" },
+  { mot: "Sub-", signification: "Dessous" },
+  { mot: "Sus-", signification: "Dessus" },
   { mot: "Tachy", signification: "Rapide" },
   { mot: "Tempor(o)", signification: "Tempe" },
-  { mot: "Thérap", signification: "Traitement" },
+  { mot: "Thalass(o)", signification: "Mer" },
+  { mot: "Thérapie", signification: "Traitement" },
   { mot: "Therm(o)", signification: "Chaleur" },
   { mot: "Thorac(o)", signification: "Thorax" },
-  { mot: "Thromb(o)", signification: "Caillot, grosseur" },
+  { mot: "Thromb(o)", signification: "Caillot" },
   { mot: "Tomie", signification: "Incision" },
   { mot: "Tox(i)", signification: "Poison" },
+  { mot: "Trans-", signification: "Transcutané" },
+  { mot: "Tri", signification: "Trois" },
   { mot: "Trich(o), Pil(o), Capill(o)", signification: "Poils, Cheveux" },
   { mot: "Urie", signification: "Urine" },
+  { mot: "-ule", signification: "Petit" },
   { mot: "Vas(o)", signification: "Vaisseau" },
   { mot: "Vén(o)", signification: "Veine" },
   { mot: "Vésic(o)", signification: "Vessie" },
