--- a/index.html
+++ b/index.html
@@ -146,13 +146,12 @@
   { mot: "Cyan(o)", signification: "Bleu" },
   { mot: "Cyst(o)", signification: "Vessie" },
   { mot: "Cyto", signification: "Cellule" },
-  { mot: "Dactyl(o)", signification: "Doigt ou orteil" },
+  { mot: "Dactyl(o), Digit(o)", signification: "Doigts" },
   { mot: "Derm(ato)", signification: "Peau" },
   { mot: "Des-", signification: "Manque" },
   { mot: "Deut", signification: "Second" },
   { mot: "Dia-", signification: "À travers" },
   { mot: "Diaphragm(o), Phren(o)", signification: "Diaphragme" },
-  { mot: "Digit(o)", signification: "Doigt" },
   { mot: "Disc(o)", signification: "Disque intervertébral" },
   { mot: "Dolicho-", signification: "Long" },
   { mot: "Dors(o)", signification: "Dos" },
@@ -176,7 +175,6 @@
   { mot: "-gène", signification: "Provenir" },
   { mot: "Gingiv", signification: "Gencives" },
   { mot: "Gloss(o), Lingu(o)", signification: "Langue" },
-  { mot: "Gluc(o)", signification: "Glucose" },
   { mot: "Glyc(o)", signification: "Sucre" },
   { mot: "Gon(o)", signification: "Genou" },
   { mot: "Graphie", signification: "Enregistrement graphique" },
@@ -320,7 +318,7 @@
   { mot: "Thromb(o)", signification: "Caillot" },
   { mot: "Tomie", signification: "Incision" },
   { mot: "Tox(i)", signification: "Poison" },
-  { mot: "Trans-", signification: "Transcutané" },
+  { mot: "Trans-", signification: "A travers" },
   { mot: "Tri", signification: "Trois" },
   { mot: "Trich(o), Pil(o), Capill(o)", signification: "Poils, Cheveux" },
   { mot: "Urie", signification: "Urine" },
