--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
   { mot: "Inter-", signification: "Entre" },
   { mot: "Inguin(o)", signification: "Aine" },
   { mot: "Intra-", signification: "Dans" },
-  { mot: "Isch", signification: "Arrêt, suppression" },
+  { mot: "Isch", signification: "Arrêt" },
   { mot: "Iso-", signification: "Egal" },
   { mot: "Ite", signification: "Inflammation" },
   { mot: "Jug(o)", signification: "Joue" },
@@ -253,7 +253,7 @@
   { mot: "Post-", signification: "Après" },
   { mot: "Postér(i)", signification: "Derrière" },
   { mot: "Pré-", signification: "Avant" },
-  { mot: "Presby", signification: "gé" },
+  { mot: "Presby", signification: "Loin" },
   { mot: "Pro-", signification: "Devant" },
   { mot: "Proct(o)", signification: "Anus" },
   { mot: "Pseud(o)", signification: "Faux" },
