--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
   { mot: "-ose", signification: "Non inflammatoire" },
   { mot: "Ostéo", signification: "Os" },
   { mot: "Palm(o)", signification: "Paume" },
-  { mot: "Para-", signification: "A côte de" },
+  { mot: "Para-", signification: "à côté de" },
   { mot: "Path(o)", signification: "Maladie" },
   { mot: "Pénie", signification: "Diminution" },
   { mot: "Pepsie, Pept", signification: "Digérer" },
